# RPS_Bot

./: .gitignore  main.py  pyproject.toml
.obsidian/: workspace.json
Learning_materials/: AI_Advanced_Predictors_Guide.md  AI_Predictors_Guide.md  AI_Safety_Guide.md  AI_Strategy_Guide.md  API_Development_Guide.md  Frontend_Development_Guide.md  GameLog_Model_Guide.md  Player_Model_Guide.md
docs/: アーキテクチャ.md  要件定義.md  詳細タスク.md  詳細タスク（追加機能）.md  詳細設計.md
src/: db.sqlite3
src/game/: models.py  urls.py  views.py
src/game/ai/: models.py  predictors.py  safety.py  strategy.py
src/game/migrations/: 0001_initial.py  0002_gamelog.py
src/game/static/css/: game.css
src/game/static/js/: game.js
src/game/templates/game/: index.html
src/game/tests/: test_models.py  test_predictors.py  test_rnn.py  test_safety.py  test_strategy.py  test_views.py
src/rps_project/: settings.py  urls.py
