[project]
name = "rps-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.*",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rps_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = "src"
testpaths = ["src"]
